# Groot-EuroSys25

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
apps/: CMakeLists.txt  groot.cu  mtx_converter.cu
cmake/: FindNVIDIAOpenMP.cmake
groot/: CMakeLists.txt
groot/formats/: coo.h
groot/transforms/: knn.h  reorder.h
groot/utils/: csr_helpers.h  option.h
groot/utils/io/: write.h
toydata/: cora.csr
